# axonBIM

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  start
.cursor/rules/: 00-architecture.mdc  10-anti-patterns.mdc  11-validacion-previa-reglas.mdc  12-protocolo-cambios-riesgo.mdc  13-diagnostico-evidencia-runtime.mdc  14-seguridad-repositorio-y-despliegue.mdc  20-backend-python.mdc  21-frontend-godot.mdc  22-jsonrpc-bridge.mdc  30-bim-normativa.mdc  40-testing.mdc  50-git-commits.mdc  60-documentation.mdc  65-microtareas-roadmap.mdc  66-git-sincronizacion-solo-autor.mdc  66-microtask-simulation-checks.mdc  67-manual-de-axonbim.mdc  70-copyright-legal.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-checks.yml
docs/: manual-de-axonbim.md
docs/architecture/: app-gui-viewport-patterns.md  draw-delivery-layers.md  geometry-analytical-vs-ocp.md  geometry-analytical.md  iso-19650.md  jsonrpc-protocol.md  topological-naming.md
docs/architecture/decisions/: 0000-template.md  0001-multi-viewport-y-vistas-ortogonales.md  0001-vistas-ortogonales-occ-y-multi-viewport.md  0002-estrategia-combinada-2d-analitica-orto-y-export-dxf.md  0003-godot-worker-headless-auxiliar.md  0004-datums-nivel-y-marcas-vista-tipo-revit.md  0005-renderizado-godot-gl-default-y-perfiles-gpu.md  README.md
docs/normativa/: README.md  glosario-organismos.md
docs/normativa/mived/: README.md  ccrd-vol-i.md  ccrd-vol-ii.md
docs/normativa/mopc/: README.md  r-005-dibujo-planos.md  r-007-barreras-arquitectonicas.md  r-016-espacios-minimos.md  r-021-tramitacion-planos.md  r-031-circulacion-vertical.md  r-032-incendios.md
docs/normativa/sources/: README.md
docs/packaging/: flatpak-pyinstaller.md
docs/phase-reports/: README.md  fases-3-y-4-inventario-pendientes.md  phase-1-report.md  phase-2-report.md  simulation-failures.md
docs/roadmap/: 00-guia-estructura-subhitos.md  README.md  fase-01-subhitos.md  fase-02-subhitos.md  fase-03-subhitos.md  fase-04-subhitos.md  post-v1-subhitos.md
docs/ui/: UI-inspiration-notes.md
frontend/: icon.svg.import  project.godot
frontend/assets/: ATTRIBUTIONS.md
frontend/assets/icons/: STYLEGUIDE.md
frontend/scenes/main/: main.tscn
frontend/scenes/worker/: worker_host.tscn
frontend/scripts/autoload/: event_bus.gd  logger.gd  rpc_client.gd
frontend/scripts/dev/: project_view_transient_simulation.gd  push_pull_rpc_e2e_smoke.gd  push_pull_rpc_smoke.gd  push_pull_simulation.gd
frontend/scripts/main/: main_scene.gd
frontend/scripts/tools/: create_wall_tool.gd  push_pull_tool.gd
frontend/scripts/ui/: procedural_icons.gd  ribbon_workspace_theme.gd
frontend/scripts/utils/: axon_logger.gd
frontend/scripts/viewport_2d/: ortho_occ_canvas.gd  ortho_vector_canvas.gd
frontend/scripts/viewport_3d/: mesh_builder.gd  nav_viewport_gizmo.gd  orbit_camera_3d.gd  orbit_camera_rig.gd  project_view.gd  storey_datum_overlay.gd  viewport_manager.gd  workspace_floor_grid.gd
frontend/scripts/worker/: worker.gd
frontend/tests/: test_rpc_client.gd
frontend/themes/: axon_theme.tres
scripts/dev/: env.axonbim.example  install_godot_official.sh  linux_profile.sh  run_dev.sh  smoke_godot.sh
src/axonbim/: __init__.py  __main__.py  logging_config.py  worker_manager.py
src/axonbim/drawing/: __init__.py  dxf_walls.py  layer_ids.py
src/axonbim/geometry/: __init__.py  meshing.py  ocp_brep.py  slab_spec.py  topo_registry.py  topology.py  wall_extrude.py  wall_spec.py  workspace_xy.py
src/axonbim/handlers/: __init__.py  draw.py  geom.py  history.py  ifc.py  project.py  system.py
src/axonbim/history/: __init__.py  recording.py  sqlite_store.py
src/axonbim/ifc/: __init__.py  opening.py  session.py  slab.py  wall.py  wall_import.py
src/axonbim/persistence/: __init__.py  migrator.py
src/axonbim/rpc/: __init__.py  dispatcher.py  framing.py  models.py  server.py
tests/: __init__.py  conftest.py  unix_socket_path.py
tests/integration/: test_phase2_many_walls_stress.py  test_rpc_server.py  test_rpc_tcp.py  test_wall_roundtrip.py
tests/unit/: test_cli_args.py  test_handlers_draw.py  test_handlers_geom.py  test_handlers_history.py  test_handlers_ifc.py  test_handlers_mvp_shell.py  test_handlers_project_open.py  test_handlers_project_storeys.py  test_handlers_system.py  test_history_extended.py  test_smoke.py  test_sqlite_history_persistence.py  test_worker_manager.py
(+29 files in other folders)
